[package]
name = "ggez-egui"
version = "0.2.0"
edition = "2021"
authors = ["NemuiSen <nekonya.sen@gmail.com>"]
license  = "MIT"
repository = "https://github.com/NemuiSen/ggez-egui"
keywords = ["ggez", "egui", "gui", "gamedev"]
description = "A simple implementation of egui for ggez"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18.1"
egui-wgpu = "0.18.0"
wgpu = "0.12"
ggez = { git = "https://github.com/ggez/ggez", branch = "devel" }
